# DataInsightPro

./: .gitignore  .replit  README.md  app.py  cognitive.py  descriptive.py  gemini.py  prescriptive.py  pyproject.toml  replit.md  smart_preprocessor.py  visualization.py  work_plan.py
.streamlit/: config.toml
analytics/: cognitive.py  descriptive.py  diagnostic.py  predictive.py  prescriptive.py
utils/: data_loader.py  data_validator.py  work_plan.py
