[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "google-genai>=1.33.0",
    "imbalanced-learn>=0.14.0",
    "keras>=3.11.3",
    "numpy>=2.2.4",
    "openai>=1.73.0",
    "pandas>=2.2.3",
    "plotly>=6.0.1",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.2",
    "statsmodels>=0.14.4",
    "streamlit>=1.44.1",
    "tensorflow>=2.20.0",
    "xgboost>=3.0.0",
]
